# autoindex

./: .dockerignore  .gitignore  Dockerfile  Pipfile  autoindex.py  conf.py  docker-compose.yml  example.env  filelist.tpl  pyproject.toml  requirements.txt  utils.py
app/: conf.py  main.py  utils.py
app/~static/: icons.css
configs/: drop.service  drop.socket  nginx.conf  nginx_include.conf  supervisor.conf  uwsgi.ini
~static/: icons.css
~static/font/: fontello.eot
