[tool.poetry]
name = "autoindex"
version = "0.1.0"
description = ""
authors = ["bakatrouble <bakatrouble@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
sanic = {extras = ["ext"], version = "^23.3.0"}
sanic-cors = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
